# cerebro

./: .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml.example  flake.nix
.github/: README.md
.github/workflows/: publish-container.yml
docker/: compose.yml.example
src/: config.rs  main.rs  web_server.rs
src/bot/: client.rs  handler.rs  mod.rs
src/bot/commands/: convert.rs  mod.rs
src/bot/services/: yliproxy.rs
src/config/: settings.rs
src/services/: mod.rs  yliproxy.rs
src/web/: handlers.rs  mod.rs  models.rs  server.rs  thumbnails.rs
