[package]
name = "cerebro"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.86"
async-process = "2.2.4"

image = { version = "0.25.2", features = ["avif-native"] }
lazy_static = "1.5.0"
regex = "1.10.3"
reqwest = "0.12.5"
serenity = "0.12.2"
tokio = { version = "1.39.2", features = ["full"] }
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0.218", features = ["derive"] }
