[package]
name = "cerebro"
version = "0.2.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.96"
async-process = "2.3.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.12"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
actix-files = "0.6.6"
serde = { version = "1.0.218", features = ["derive"] }
