[package]
name = "cerebro"
version = "0.2.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-process = "2.5.0"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.13"
serenity = "0.12.5"
tokio = { version = "1.49.0", features = ["full"] }
actix-web = "4.13.0"
actix-files = "0.6.10"
serde = { version = "1.0.228", features = ["derive"] }
